--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="vue2-autocomplete-js/dist/style/vue2-autocomplete.css"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>app</title>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBD5iUv5_fX4wstCHO9pvHYYoLYAGgNULg
+    "></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   </body>
 </html>
