--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="vue2-autocomplete-js/dist/style/vue2-autocomplete.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Hind|Open+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/style.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>app</title>
   </head>
