--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBD5iUv5_fX4wstCHO9pvHYYoLYAGgNULg
+    <script src="https://maps.googleapis.com/maps/api/js?key=<%=GOOGLE_MAP%>
     "></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   </body>
